fixed overflow issues with the title and blurb text

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -141,12 +141,14 @@ hr {
 	font-size: 1.2rem;
 	height: 5rem;
 	background-color: #e3e7ed;
+	overflow: hidden;
 }
 
 .newsBlurb {
 	
 	padding: 0.5rem;
 	height: 20rem;
+	overflow: hidden;
 }
 
 .postTime {
